--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,7 @@
 <div id="results"></div>
 
 <script>
-    const API_BASE = "https://f1ifimq0p3.execute-api.us-east-1.amazonaws.com/v2";
+    const API_BASE = "https://08zgls0zxk.execute-api.us-east-1.amazonaws.com/prod";
 
     /* ============================================================
        UPLOAD PHOTO
