--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,7 @@
 <div id="results"></div>
 
 <script>
-    const API_BASE = "https://ckid3afe3c.execute-api.us-east-1.amazonaws.com/prod";
+    const API_BASE = "https://s25anjlknb.execute-api.us-east-1.amazonaws.com/prod";
 
     /* ============================================================
        UPLOAD PHOTO
