--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Photo Upload & Search</title>
+    <title>Photo Upload & Search v1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
