--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-<h1>Photo Upload & Search</h1>
+<h1>Photo Upload & Search v1</h1>
 
 <!-- -------------------- UPLOAD SECTION -------------------- -->
 
